--- a/psct/index.html
+++ b/psct/index.html
@@ -53,7 +53,7 @@
 <div id="vid_63e3221ac71e360009acd6bd" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_63e3221ac71e360009acd6bd" src="https://images.converteai.net/07477cf7-0f1c-4b36-b36b-2b4cb1cdaec1/players/63e3221ac71e360009acd6bd/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_63e3221ac71e360009acd6bd" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_63e3221ac71e360009acd6bd">var s=document.createElement("script");s.src="https://scripts.converteai.net/07477cf7-0f1c-4b36-b36b-2b4cb1cdaec1/players/63e3221ac71e360009acd6bd/player.js",s.async=!0,document.head.appendChild(s);</script>
       
 <div id="cta1" class="mt-4 d-none">
-<a href="https://ev.braip.com/ref?pl=plamp8yg&ck=chenpwl5&af=afizvd2m3" class="a-btn" style="text-decoration: none;">
+<a href="https://ev.braip.com/campanhas/cpa/came61888" class="a-btn" style="text-decoration: none;">
 <span class="span-btn">FAÇA SEU CADASTRO!</span>
 <span class="span-btn2">(Atenção: Últimas vagas)</span>
 </a>
